deploy/on-premise/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: aspnetcore
spec:
  ingressClassName: nginx
  rules:
    - host: aspnetcore.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aspnetcore-sample-service
                port:
                  number: 80
